--- a/style.css
+++ b/style.css
@@ -4,25 +4,67 @@ body {
 
 #main-div {
     margin: auto;
-    width: 60%;
+    width: 80%;
     padding: 10px;
     animation: glow 5s infinite;
 }
 
 #game-name {
+    font-family: 'Bangers', cursive;
     color: #5D5D5D;
-    font-size: 60px;
+    font-size: 90px;
     animation: pulse 5s;
 }
 
+.icon-box {
+    background-color: coral;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 60%;
+}
+
+.box {
+
+    width: 100%;
+}
+
+#rps-div {
+    /*background-color: black;*/
+    position: relative;
+    margin: auto;
+    width: 80%;
+    height: 500px;
+    display: flex;
+    flex-direction: row;
+    border: 3px solid #E5D429;
+    border-radius: 64px 48px 32px 16px/16px 32px 48px 64px;
+}
+
 .player {
-    background-color: aqua;
+    /*background-color: aqua;*/
+    border-right: 3px solid #E5D429; 
 }
 
 .computer {
-    background-color: blueviolet;
+    /*background-color: blueviolet;*/
 }
 
+.block {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 25%;
+    margin-top: auto;
+    border-top: 3px solid #E5D429; 
+
+}
+
+img {
+    padding-left: 10px;
+}
 @keyframes pulse {
     0% {
       color: #F7F7F7;
