--- a/style.css
+++ b/style.css
@@ -1,75 +1,96 @@
 body {
-    background-color: #F7F7F7;
+    background-color: #4c69f6;
+    color: #5D5D5D;
 }
 
-#main-div {
+#title-div {
     margin: auto;
     width: 80%;
     padding: 10px;
-    animation: glow 5s infinite;
+}
+
+p {
+    font-family: 'Comic Neue', cursive;
 }
 
 #game-name {
     font-family: 'Bangers', cursive;
     color: #5D5D5D;
     font-size: 90px;
-    animation: pulse 5s;
+    animation: pulse 5s, glow 5s infinite;
 }
 
-.icon-box {
-    background-color: coral;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 60%;
-}
-
-.box {
-
-    width: 100%;
-}
-
-
-/*--------------------------------------------------------------*/
-#rps-div {
-    /*background-color: black;*/
-    position: relative;
+.msg {
+    background-color: white;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    z-index: 1;
     margin: auto;
-    width: 80%;
-    height: 500px;
+    width: 400px;
+    height: 200px;
+    border-radius: 30px;
+    border: 10px solid #f6db35;
+    text-align: center;
+}
+
+.screen-div {
+    /*background-color: cadetblue; remove*/
     display: flex;
-    flex-direction: row;
-    border: 3px solid #E5D429;
-    border-radius: 64px 48px 32px 16px/16px 32px 48px 64px;
+    height: 600px;
+    
+    
 }
 
-.player {
-    /*background-color: aqua;*/
-    border-right: 3px solid #E5D429; 
-}
-
-.computer {
-    /*background-color: blueviolet;*/
-}
-
-.block {
+.choice {
+    /*background-color: darkblue; remove*/
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center
+    width: 95%;
+    height: 60%;
+
+}
+
+.player-div, .comp-div {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    height: 25%;
-    margin-top: auto;
-    border-top: 3px solid #E5D429; 
-
+    
 }
 
-img {
-    padding-left: 10px;
+/*.player-div {
+    background-color: chartreuse; /*remove   
 }
+.comp-div {
+    background-color: coral; /*remove
+}*/
+
+.icon-div {
+    /*background-color: black; remove*/
+    margin-top: 25px;
+    width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+img:hover {
+    box-shadow: 5px 5px 10px #ee5454;
+    border-radius: 50%;
+    width: 95px;
+    height: 95px;
+}
+/*--------------------------------------------------------------*/
+
 @keyframes pulse {
     0% {
-      color: #F7F7F7;
+      color: #4c69f6;
     }
     100% {
       color: #5D5D5D;
@@ -77,7 +98,11 @@ img {
   }
 
 @keyframes glow {
-    50% {text-shadow: 5px 5px 10px #E5D429;}
+    50% {text-shadow: 5px 5px 10px #ffc510;}
 }
 
 
+/*
+NOTES:
+-- see what classes have the same attributes and group them together
+*/
